--- a/wp-content/themes/shapeshifter/sass/partials/_base.scss
+++ b/wp-content/themes/shapeshifter/sass/partials/_base.scss
@@ -15,6 +15,14 @@ h6 {
     color: $white;
 }
 
+p {
+
+  @include media-breakpoint-down(md) {
+    font-size: 14px;
+  }
+
+}
+
 a {
     text-decoration: none;
     color: $white;
@@ -35,5 +43,7 @@ a {
 }
 
 .content {
-    color: $white;
+    // color: $white;
+    // margin: 24px 0;
+    // padding: 16px 0;
 }
