--- a/wp-content/themes/shapeshifter/sass/partials/_modal.scss
+++ b/wp-content/themes/shapeshifter/sass/partials/_modal.scss
@@ -1,11 +1,11 @@
-.shapeshifter-modal {
+.ss-modal {
     max-width: 100%;
     padding: 1.4rem 1.2rem;
     border: 8px solid $white;
     border-radius: 5px;
     background: #222;
 
-    .header {
+    &__header {
         max-width: max-content;
         min-width: 20rem;
         background: $white;
@@ -14,45 +14,38 @@
         top: -3.3rem;
         left: 0;
 
-        .title,
-        .date {
+        --notchSize: 32px;
+        
+        clip-path: polygon(0px 0px, calc(100% - var(--notchSize)) 0.00%, 100% 100%, 0px 100%);
+
+        &--title,
+        &--date {
             margin: 0;
             color: #222;
         }
 
-        .title {
-            // letter-spacing: .3px;
-        }
-        .date {
+        &--date {
             font-weight: 300;
         }
     }
 
-
-
     .cta {
         display: inline-block;
-        min-width: 11rem;
-        height: 2.4rem;
+        min-width: 11.5rem;
+        height: 2.9rem;
         position: absolute;
-        bottom: 0.5rem;
-        right: 0.5rem;
+        bottom: 0rem;
+        right: 0rem;
         z-index: 2;
         background-color: $white;
         color: #222;
         text-decoration: none;
+
+        --notchSize: 16px;
+
+        clip-path: polygon(var(--notchSize) 0, 100% 0, 100% 100%, 0 100%);
     }
 
-    .triangle {
-        width: 0;
-        height: 0;
-        border-left: 24px solid transparent;
-        border-bottom: 24px solid #FFF;
-        border-top: 24px solid transparent;
-        position: absolute;
-        bottom: 1.6rem;
-        right: 1.1rem;
-        z-index: 2;
-    }
+
 
 }
